# OC_P10_Restapi

./: README.md  pyproject.toml
api/: db.sqlite3  models.py
api/api/: settings.py
app/: settings.py  urls.py
app/api/: views.py
authentication/: serializers.py  urls.py  views.py
projects/: admin.py  apps.py  models.py  permissions.py  serializers.py  urls.py  views.py
projects/migrations/: 0001_initial.py  0002_remove_issue_satus_issue_status_and_more.py  0003_alter_project_type.py  0004_rename_project_id_contributor_project_and_more.py  0005_rename_author_user_id_comment_author_user_and_more.py  0006_project_author_alter_contributor_permissions.py  0007_alter_comment_author_user_alter_comment_issue_and_more.py
